--- a/extent-reports/extent-report.html
+++ b/extent-reports/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 25, 2024 11:04:57 PM</span></a>
+<a href="#"><span class="badge badge-primary">Aug 26, 2024 09:30:19 AM</span></a>
 </li>
 </ul>
 </div>
@@ -88,7 +88,7 @@
           <div class="test-detail">
             <p class="name">testgetStarted</p>
             <p class="text-sm">
-              <span>11:05:07 PM</span> / <span>00:00:02:984</span>
+              <span>9:30:28 AM</span> / <span>00:00:02:633</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -97,9 +97,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testgetStarted</h5>
-<span class='badge badge-success'>08.25.2024 11:05:07 PM</span>
-<span class='badge badge-danger'>08.25.2024 11:05:10 PM</span>
-<span class='badge badge-default'>00:00:02:984</span>
+<span class='badge badge-success'>08.26.2024 9:30:28 AM</span>
+<span class='badge badge-danger'>08.26.2024 9:30:31 AM</span>
+<span class='badge badge-default'>00:00:02:633</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -111,7 +111,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:10 PM</td>
+        <td>9:30:31 AM</td>
         <td>
           Test Passed
         </td>
@@ -128,7 +128,7 @@
           <div class="test-detail">
             <p class="name">testRegister</p>
             <p class="text-sm">
-              <span>11:05:11 PM</span> / <span>00:00:04:342</span>
+              <span>9:30:31 AM</span> / <span>00:00:04:526</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -137,9 +137,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testRegister</h5>
-<span class='badge badge-success'>08.25.2024 11:05:11 PM</span>
-<span class='badge badge-danger'>08.25.2024 11:05:15 PM</span>
-<span class='badge badge-default'>00:00:04:342</span>
+<span class='badge badge-success'>08.26.2024 9:30:31 AM</span>
+<span class='badge badge-danger'>08.26.2024 9:30:35 AM</span>
+<span class='badge badge-default'>00:00:04:526</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -151,7 +151,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:15 PM</td>
+        <td>9:30:35 AM</td>
         <td>
           Test Passed
         </td>
@@ -168,7 +168,7 @@
           <div class="test-detail">
             <p class="name">testSignin</p>
             <p class="text-sm">
-              <span>11:05:15 PM</span> / <span>00:00:01:056</span>
+              <span>9:30:36 AM</span> / <span>00:00:01:110</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -177,9 +177,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testSignin</h5>
-<span class='badge badge-success'>08.25.2024 11:05:15 PM</span>
-<span class='badge badge-danger'>08.25.2024 11:05:16 PM</span>
-<span class='badge badge-default'>00:00:01:056</span>
+<span class='badge badge-success'>08.26.2024 9:30:36 AM</span>
+<span class='badge badge-danger'>08.26.2024 9:30:37 AM</span>
+<span class='badge badge-default'>00:00:01:110</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -191,7 +191,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:16 PM</td>
+        <td>9:30:37 AM</td>
         <td>
           Test Passed
         </td>
@@ -208,7 +208,7 @@
           <div class="test-detail">
             <p class="name">testDSALGO</p>
             <p class="text-sm">
-              <span>11:05:16 PM</span> / <span>00:02:10:077</span>
+              <span>9:30:37 AM</span> / <span>00:03:15:278</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -217,16 +217,16 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">testDSALGO</h5>
-<span class='badge badge-success'>08.25.2024 11:05:16 PM</span>
-<span class='badge badge-danger'>08.25.2024 11:07:26 PM</span>
-<span class='badge badge-default'>00:02:10:077</span>
+<span class='badge badge-success'>08.26.2024 9:30:37 AM</span>
+<span class='badge badge-danger'>08.26.2024 9:33:52 AM</span>
+<span class='badge badge-default'>00:03:15:278</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
 </div>    <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='screenshots/testDSALGO_20240825230726.png' src="screenshots/testDSALGO_20240825230726.png">
+<img data-featherlight='screenshots/testDSALGO_20240826093351.png' src="screenshots/testDSALGO_20240826093351.png">
     
     </div></div>
 <div class="detail-body mt-4">
@@ -235,14 +235,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:07:26 PM</td>
+        <td>9:33:51 AM</td>
         <td>
           Test Failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:07:26 PM</td>
+        <td>9:33:51 AM</td>
         <td>
           <textarea readonly class="code-block">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//a[@class='btn btn-info']"}
   (Session info: chrome=127.0.6533.120)
@@ -250,9 +250,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.21.0', revision: '79ed462ef4'
 System info: os.name: 'Mac OS X', os.arch: 'aarch64', os.version: '14.4', java.version: '19'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [ff221551972b446ac9f31b1b2bc98dec, findElement {value=//a[@class='btn btn-info'], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 127.0.6533.120, chrome: {chromedriverVersion: 127.0.6533.119 (bdef6783a05..., userDataDir: /var/folders/6p/y3sjyts56hl...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63549}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:63549/devtoo..., se:cdpVersion: 127.0.6533.120, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: ff221551972b446ac9f31b1b2bc98dec
+Command: [06fa4cef22b4c5eb65b996536a2c06db, findElement {using=xpath, value=//a[@class='btn btn-info']}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 127.0.6533.120, chrome: {chromedriverVersion: 127.0.6533.119 (bdef6783a05..., userDataDir: /var/folders/6p/y3sjyts56hl...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53937}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:53937/devtoo..., se:cdpVersion: 127.0.6533.120, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 06fa4cef22b4c5eb65b996536a2c06db
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:67)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:484)
@@ -267,8 +267,8 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:355)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:349)
-	at pageObjects.dsalgoPage.clickTryHere(dsalgoPage.java:288)
-	at pageObjects.dsalgoPage.topicsCovered(dsalgoPage.java:269)
+	at pageObjects.dsalgoPage.clickTryHere(dsalgoPage.java:289)
+	at pageObjects.dsalgoPage.topicsCovered(dsalgoPage.java:270)
 	at pageObjects.dsalgoPage.dslist(dsalgoPage.java:132)
 	at dsalgoTests.dsalgoTest.testDSALGO(dsalgoTest.java:85)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
@@ -297,14 +297,14 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:07:26 PM</td>
+        <td>9:33:51 AM</td>
         <td>
           Test Failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:07:26 PM</td>
+        <td>9:33:51 AM</td>
         <td>
           <textarea readonly class="code-block">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//a[@class='btn btn-info']"}
   (Session info: chrome=127.0.6533.120)
@@ -312,9 +312,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.21.0', revision: '79ed462ef4'
 System info: os.name: 'Mac OS X', os.arch: 'aarch64', os.version: '14.4', java.version: '19'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [ff221551972b446ac9f31b1b2bc98dec, findElement {value=//a[@class='btn btn-info'], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 127.0.6533.120, chrome: {chromedriverVersion: 127.0.6533.119 (bdef6783a05..., userDataDir: /var/folders/6p/y3sjyts56hl...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63549}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:63549/devtoo..., se:cdpVersion: 127.0.6533.120, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: ff221551972b446ac9f31b1b2bc98dec
+Command: [06fa4cef22b4c5eb65b996536a2c06db, findElement {using=xpath, value=//a[@class='btn btn-info']}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 127.0.6533.120, chrome: {chromedriverVersion: 127.0.6533.119 (bdef6783a05..., userDataDir: /var/folders/6p/y3sjyts56hl...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53937}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:53937/devtoo..., se:cdpVersion: 127.0.6533.120, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 06fa4cef22b4c5eb65b996536a2c06db
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:67)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:484)
@@ -329,8 +329,8 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:355)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:349)
-	at pageObjects.dsalgoPage.clickTryHere(dsalgoPage.java:288)
-	at pageObjects.dsalgoPage.topicsCovered(dsalgoPage.java:269)
+	at pageObjects.dsalgoPage.clickTryHere(dsalgoPage.java:289)
+	at pageObjects.dsalgoPage.topicsCovered(dsalgoPage.java:270)
 	at pageObjects.dsalgoPage.dslist(dsalgoPage.java:132)
 	at dsalgoTests.dsalgoTest.testDSALGO(dsalgoTest.java:85)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
@@ -369,7 +369,7 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
           <div class="test-detail">
             <p class="name">testSignout</p>
             <p class="text-sm">
-              <span>11:07:26 PM</span> / <span>00:00:00:001</span>
+              <span>9:33:52 AM</span> / <span>00:00:00:000</span>
               <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
@@ -378,9 +378,9 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-skip">testSignout</h5>
-<span class='badge badge-success'>08.25.2024 11:07:26 PM</span>
-<span class='badge badge-danger'>08.25.2024 11:07:26 PM</span>
-<span class='badge badge-default'>00:00:00:001</span>
+<span class='badge badge-success'>08.26.2024 9:33:52 AM</span>
+<span class='badge badge-danger'>08.26.2024 9:33:52 AM</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -392,7 +392,7 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
   <tbody>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>11:07:26 PM</td>
+        <td>9:33:52 AM</td>
         <td>
           Test Skipped
         </td>
@@ -443,7 +443,7 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>23:05:16 PM</td>
+<td>09:30:37 AM</td>
 <td>
 <a href="#" class="linked" test-id='4' id='4'>testDSALGO</a>
 </td>
@@ -465,13 +465,13 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 25, 2024 11:04:57 PM</h3>
+<h3>Aug 26, 2024 09:30:19 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 25, 2024 11:07:26 PM</h3>
+<h3>Aug 26, 2024 09:33:52 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -541,7 +541,7 @@ Session ID: ff221551972b446ac9f31b1b2bc98dec
 </div></div>
 <script>
 var timeline = {
-"testgetStarted":2.984,"testRegister":4.342,"testSignin":1.056,"testDSALGO":130.077,"testSignout":0.001
+"testgetStarted":2.633,"testRegister":4.526,"testSignin":1.11,"testDSALGO":195.278,"testSignout":0
 };
 </script>
 <div class="row">
